--- a/library.theme.css
+++ b/library.theme.css
@@ -1,1 +1,14 @@
+/**
+ * @name library
+ * @description A cozy, library themed theme.
+ * @version 1.0.0
+ * @server https://discord.gg/MDr2tK8YHN 
+ * @author NicoLovesCode (github) Tiramisu#9193 (discord)
+ * @source https://github.com/NicoLoveCode/Library.theme.css
+ */
+ 
+
+
+
+
 @import url(https://github.com/NicoLoveCode/Library.themes.css/blob/main/main.css)
