--- a/library.theme.css
+++ b/library.theme.css
@@ -11,4 +11,4 @@
 
 
 
-@import url(https://github.com/NicoLoveCode/Library.themes.css/blob/main/main.css)
+@import url("https://github.com/NicoLoveCode/Library.themes.css/blob/main/main.css")
