--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
  * @server https://discord.gg/MDr2tK8YHN 
  * @author NicoLovesCode (github) Tiramisu#9193 (discord)
  * @source https://github.com/NicoLoveCode/Library.theme.css
+ * @website https://nicolovecode.github.io/nicolovescode.github.io/
  */
  
 
