--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-
 /**
  * @name library
  * @description A cozy, library themed theme.
@@ -349,3 +348,78 @@ h1, h2, h3, h4, h5, h6 {
     }
 
 
+
+
+
+
+:root{
+    --channels-default: rgb(186, 149, 101);
+}
+.iconVisibility-vptxma:not(.modeMuted-2T4MDZ.iconVisibility-vptxma, .modeUnread-3Cxepe.iconVisibility-vptxma, .modeSelected-3DmyhH.iconVisibility-vptxma ) svg{
+    color: rgb(186, 149, 101);
+}
+.iconVisibility-vptxma:not(.modeMuted-2T4MDZ.iconVisibility-vptxma, .modeUnread-3Cxepe.iconVisibility-vptxma, .modeSelected-3DmyhH.iconVisibility-vptxma ):hover svg{
+    color: rgb(186, 149, 101);
+}
+.iconVisibility-vptxma:not(.modeMuted-2T4MDZ.iconVisibility-vptxma, .modeUnread-3Cxepe.iconVisibility-vptxma, .modeSelected-3DmyhH.iconVisibility-vptxma ):hover .name-28HaxV{
+    color: rgb(186, 149, 101);
+}
+.iconVisibility-vptxma:not(.modeMuted-2T4MDZ.iconVisibility-vptxma, .modeUnread-3Cxepe.iconVisibility-vptxma, .modeSelected-3DmyhH.iconVisibility-vptxma ) .content-1gYQeQ{
+    transition: .5s ease;
+}
+.iconVisibility-vptxma:not(.modeMuted-2T4MDZ.iconVisibility-vptxma, .modeUnread-3Cxepe.iconVisibility-vptxma, .modeSelected-3DmyhH.iconVisibility-vptxma ):hover .content-1gYQeQ{
+    background-color: rgba(222, 184, 135, 0.145);
+}
+
+
+.modeMuted-2T4MDZ :is(.name-28HaxV, .iconVisibility-vptxma svg) {
+    color: rgb(119, 86, 40);
+    transition: .5s ease;
+}
+.modeMuted-2T4MDZ:hover :is(.name-28HaxV, .iconVisibility-vptxma svg) {
+    color: rgb(186, 149, 101);
+}
+.modeMuted-2T4MDZ .content-1gYQeQ{
+    transition: .5s ease;
+}
+.modeMuted-2T4MDZ:hover .content-1gYQeQ{
+    background-color: rgba(222, 184, 135, 0.311);
+}
+
+
+.modeUnread-3Cxepe :is(.name-28HaxV, .iconVisibility-vptxma svg){
+    color: burlywood;
+    text-shadow: 0 0 10px currentColor;
+    transition: .5s ease;
+}
+.modeUnread-3Cxepe .unread-36eUEm{
+    background-color: burlywood;
+}
+.modeUnread-3Cxepe:hover :is(.name-28HaxV, .iconVisibility-vptxma svg) {
+    color: burlywood;
+}
+.modeUnread-3Cxepe .content-1gYQeQ{
+    transition: .5s ease;
+}
+.modeUnread-3Cxepe:hover .content-1gYQeQ{
+    background-color: rgba(222, 184, 135, 0.161);
+}
+
+
+.modeSelected-3DmyhH :is(.name-28HaxV, .iconContainer-21RCa3 svg){
+    color: rgb(247, 190, 83);
+    transition: .5s ease;
+}
+.modeSelected-3DmyhH .unread-36eUEm{
+    background-color: burlywood;
+}
+.modeSelected-3DmyhH:hover :is(.name-28HaxV, .iconVisibility-vptxma svg) {
+    color: burlywood;
+}
+.modeSelected-3DmyhH .content-1gYQeQ{
+    transition: .5s ease;
+    background-color: rgba(222, 184, 135, 0.248);
+}
+.modeSelected-3DmyhH:hover .content-1gYQeQ{
+    background-color: rgba(222, 184, 135, 0.161);
+}
