--- a/main.css
+++ b/main.css
@@ -423,3 +423,7 @@ h1, h2, h3, h4, h5, h6 {
 .modeSelected-3DmyhH:hover .content-1gYQeQ{
     background-color: rgba(222, 184, 135, 0.161);
 }
+
+.contents-3ca1mk {
+	color: rgb(119, 86, 40);
+}
