--- a/library.theme.css
+++ b/library.theme.css
@@ -11,6 +11,6 @@
 
 :root {
  --accent: 138,  104, 61;
- ]
+}
 
 @import url("https://github.com/NicoLoveCode/Library.themes.css/blob/main/main.css")
