--- a/library.theme.css
+++ b/library.theme.css
@@ -13,4 +13,4 @@
  --accent: 138,  104, 61;
 }
 
-@import url("https://github.com/NicoLoveCode/Library.themes.css/blob/main/main.css")
+@import url("https://nicolovecode.github.io/Library.theme.css/main.css")
